--- a/release.json
+++ b/release.json
@@ -1,5 +1,13 @@
 [
   {
+    "version": "2.1.2",
+    "features": [
+      "大破進撃防止窓を、2017秋E2における7隻出撃の仕様に対応させた"
+    ],
+    "date": "2017/11/28",
+    "comment": ""
+  },
+  {
     "version": "2.1.1",
     "features": [
       "海域情報をwikiから取得するスクリプトを追加",
