--- a/release.json
+++ b/release.json
@@ -1,5 +1,13 @@
 [
   {
+    "version": "2.1.3",
+    "features": [
+      "12月新規追加任務を反映"
+    ],
+    "date": "2017/12/14",
+    "comment": "秋イベントおつかれさまでした。"
+  },
+  {
     "version": "2.1.2",
     "features": [
       "大破進撃防止窓を、2017秋E2における7隻出撃の仕様に対応させた"
