--- a/release.json
+++ b/release.json
@@ -1,5 +1,14 @@
 [
   {
+    "version": "2.1.4",
+    "features": [
+      "改修工廠早見表の表示範囲修正",
+      "改修工廠カタログの更新"
+    ],
+    "date": "2018/01/31",
+    "comment": ""
+  },
+  {
     "version": "2.1.3",
     "features": [
       "12月新規追加任務を反映"
