--- a/release.json
+++ b/release.json
@@ -1,5 +1,17 @@
 [
   {
+    "version": "2.1.5",
+    "features": [
+      "1/27メンテの内容を反映",
+      "2/5メンテの内容を反映",
+      "『重要なお知らせ』を追加",
+      "資源推移表データの一括削除ボタンを追加",
+      "開発用スクリプトの初回潜在エラーを修正"
+    ],
+    "date": "2018/04/01",
+    "comment": ""
+  },
+  {
     "version": "2.1.4",
     "features": [
       "改修工廠早見表の表示範囲修正",
