--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^2.7.0",
+    "mammut": "*",
     "worker-loader": "^0.8.1"
   },
   "jest": {
