--- a/release.json
+++ b/release.json
@@ -1,5 +1,14 @@
 [
   {
+    "version": "2.1.6",
+    "features": [
+      "DEFAULT WHITE の画面サイズを２期対応",
+      "依存パッケージの大掃除と更新"
+    ],
+    "date": "2018/08/19",
+    "comment": "さて、待望の艦これ第２期がはじまって、意外にも「艦これウィジェット」はいい感じに動いているように見えます。せっかく「艦これ」が第２期になったので、「艦これウィジェット」はVersion 3.0を目指していきたいと思っています。いろいろご不便おかけするかもしれないですが、なるべくv2.0系を使ってる提督各位に影響の無いようやっていきますので、生暖かく見守っててください！,開発者のみなさんありがとうございます。"
+  },
+  {
     "version": "2.1.5",
     "features": [
       "1/27メンテの内容を反映",
