--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kan-colle-widget",
-  "version": "3.0.0-rc.0",
+  "version": "3.0.0-alpha.0",
   "description": "『艦これ』をちょっとだけ快適にするやつ",
   "engines": {
     "node": "9.11",
