--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "艦これウィジェット",
+  "name": "test-艦これウィジェット",
   "version": "3.0.0.0",
   "version_name": "3.0.0-alpha.0",
   "description": "「艦これ」をほどよく快適にたのしく遊べるようにするやつです",
