--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "npm": "6.4.0"
   },
   "scripts": {
-    "start":   "NODE_ENV=development webpack -p --watch",
-    "release": "NODE_ENV=production webpack -p",
+    "start": "NODE_ENV=development webpack -p --watch",
+    "build": "NODE_ENV=production webpack",
+    "zip": "rm -rf release/kcwidget release/kcwidget.zip && mkdir -p release/kcwidget && cp -r dest release/kcwidget && cp manifest.json release/kcwidget && zip -r release/kcwidget.zip release/kcwidget/*",
     "lint": "tslint ./src/**/*.ts",
     "test": "jest --coverage",
     "ci": "tslint ./src/**/*.ts && jest --coverage && cat ./coverage/lcov.info | coveralls"
@@ -25,6 +26,7 @@
     "coveralls": "^3.0.2",
     "jest": "^23.5.0",
     "jest-cli": "^23.5.0",
+    "request-promise": "^4.2.2",
     "ts-jest": "^23.1.3",
     "ts-loader": "^4.5.0",
     "tslint": "^5.11.0",
