all_branches: true にしとかないと condition でtrueでも発火しないらしい

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ script:
     - npm run ci
 deploy:
     - provider: script
-      script: bash ./scripts/deploy.sh
+      script: npm run zip && npm run deploy
       on:
+        all_branches: true
         condition: $TRAVIS_BRANCH =~ staging
