--- a/release.json
+++ b/release.json
@@ -1,5 +1,16 @@
 [
   {
+    "version": "2.1.7",
+    "features": [
+      "編成キャプチャがズレる問題の修正",
+      "建造画面の数字の大きさとかが微妙に変わったので画像解析の座標の修正",
+      "資源推移表の取得精度の向上",
+      "建造のAPI仕様がちょっとだけ変わってたので対応"
+    ],
+    "date": "2018/08/22",
+    "comment": ""
+  },
+  {
     "version": "2.1.6",
     "features": [
       "DEFAULT WHITE の画面サイズを２期対応",
