--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,9 @@
       "dest/js/background.js"
     ]
   },
+  "browser_action": {
+    "default_popup": "dest/html/popup.html"
+  },
   "content_scripts": [
     {
       "matches": [
