--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "ts-loader": "^4.5.0",
     "tslint": "^5.11.0",
     "typescript": "^3.0.1",
+    "vue-loader": "^15.4.1",
+    "vue-property-decorator": "^7.0.0",
+    "vue-template-compiler": "^2.5.17",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0"
   },
@@ -58,6 +61,7 @@
     ]
   },
   "dependencies": {
-    "spectre.css": "^0.5.3"
+    "spectre.css": "^0.5.3",
+    "vue": "^2.5.17"
   }
 }
