--- a/release.json
+++ b/release.json
@@ -1,5 +1,13 @@
 [
   {
+    "version": "2.1.8",
+    "features": [
+      "[xia] 第2期のHTMLで大破進撃防止窓の窓内表示が可能となるよう修正"
+    ],
+    "date": "2018/08/31",
+    "comment": ""
+  },
+  {
     "version": "2.1.7",
     "features": [
       "編成キャプチャがズレる問題の修正",
