--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "vue-loader": "^15.4.1",
     "vue-property-decorator": "^7.0.0",
     "vue-template-compiler": "^2.5.17",
+    "vue-typescript-import-dts": "^4.0.0",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0"
   },
