--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/otiai10/kanColleWidget#readme",
   "devDependencies": {
+    "@types/chrome": "0.0.72",
     "@types/jest": "^23.3.1",
     "coveralls": "^3.0.2",
     "css-loader": "^1.0.0",
@@ -62,6 +63,7 @@
     ]
   },
   "dependencies": {
+    "chomex": "^1.0.17",
     "spectre.css": "^0.5.3",
     "vue": "^2.5.17"
   }
