テストをちゃんとした

--- a/package.json
+++ b/package.json
@@ -46,6 +46,12 @@
     "webpack-cli": "^3.1.0"
   },
   "jest": {
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "src/js/*.ts",
+      "src/js/Applications/**/*.ts",
+      "src/js/Services/**/*.ts"
+    ],
     "verbose": true,
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
