--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "node-sass": "^4.9.3",
     "request-promise": "^4.2.2",
     "sass-loader": "^7.1.0",
+    "sinon-chrome": "^2.3.2",
     "ts-jest": "^23.1.3",
     "ts-loader": "^4.5.0",
     "tslint": "^5.11.0",
@@ -61,6 +62,9 @@
       "tsx",
       "js",
       "jsx"
+    ],
+    "setupFiles": [
+      "<rootDir>/tests/setup/chrome.ts"
     ],
     "testRegex": "tests/.*-test\\.ts$",
     "testPathIgnorePatterns": [
