--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "version": "node ./scripts/version.js",
     "deploy": "node ./scripts/publish.js ./release/kcwidget.zip",
     "lint": "tslint ./src/**/*.ts",
-    "test": "npm run lint && jest --coverage",
+    "test": "npm run lint && jest",
     "ci": "tslint ./src/**/*.ts && jest --coverage && cat ./coverage/lcov.info | coveralls"
   },
   "repository": "git+https://github.com/otiai10/kanColleWidget.git",
@@ -47,7 +47,7 @@
     "webpack-cli": "^3.1.0"
   },
   "jest": {
-    "collectCoverage": true,
+    "collectCoverage": false,
     "collectCoverageFrom": [
       "src/js/*.ts",
       "src/js/Applications/**/*.ts",
