canvasエレメントを要求するテストを追加

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "coveralls": "^3.0.2",
     "css-loader": "^1.0.0",
     "jest": "^23.5.0",
+    "jest-canvas-mock": "^1.1.0",
     "jest-cli": "^23.5.0",
     "mini-css-extract-plugin": "^0.4.2",
     "node-sass": "^4.9.3",
@@ -64,7 +65,8 @@
       "jsx"
     ],
     "setupFiles": [
-      "<rootDir>/tests/setup/chrome.ts"
+      "<rootDir>/tests/setup/chrome.ts",
+      "jest-canvas-mock"
     ],
     "testRegex": "tests/.*-test\\.ts$",
     "testPathIgnorePatterns": [
