--- a/manifest.json
+++ b/manifest.json
@@ -12,8 +12,8 @@
     "<all_urls>"
   ],
   "icons": {
-    "16": "dest/img/icons/app.test.16.png",
-    "48": "dest/img/icons/app.test.48.png"
+    "16": "dest/img/app/icon.dev.16.png",
+    "48": "dest/img/app/icon.dev.48.png"
   },
   "background": {
     "scripts": [
