--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   },
   "scripts": {
     "start": "NODE_ENV=development webpack -p --watch",
-    "build": "NODE_ENV=production webpack && rm dest/css/*.js",
-    "pack": "./scripts/pack.sh",
     "version": "node ./scripts/version.js",
-    "deploy": "node ./scripts/publish.js ./release/kcwidget.zip",
+    "build": "NODE_ENV=production webpack && rm dest/css/*.js",
+    "publish": "node ./scripts/publish.js ./release/kcwidget.zip",
+    "pack": "./scripts/pack.sh",
     "lint": "tslint ./src/**/*.ts",
     "test": "npm run lint && jest",
     "ci": "tslint ./src/**/*.ts && jest --coverage && cat ./coverage/lcov.info | coveralls"
