--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ script:
   - npm run ci
 after_success:
   # {{{ SSH Key の復帰
-  - openssl aes-256-cbc -K $encrypted_e6cfc0b0977e_key -iv $encrypted_e6cfc0b0977e_iv -in ./.travis/id_rsa.enc -out ~/.ssh/kcwidget_rsa -d
-  - chmod 600 ~/.ssh/kcwidget_rsa
-  - echo -e "Host github.com\n\tStrictHostKeyChecking no\n\tIdentityFile ~/.ssh/kcwidget_rsa\n" >> ~/.ssh/config
+  - openssl aes-256-cbc -K $encrypted_e6cfc0b0977e_key -iv $encrypted_e6cfc0b0977e_iv -in ./.travis/deploy_key.enc -out ~\/.ssh/deploy_rsa -d
+  - chmod 600 ~/.ssh/deploy_rsa
+  - echo -e "Host github.com\n\tStrictHostKeyChecking no\n\tIdentityFile ~/.ssh/deploy_rsa\n" >> ~/.ssh/config
   # }}}
   # {{{ Git user の設定
   - git config --global user.email otiai10+ayanel-ci@gmail.com
