--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ script:
   - npm run ci
 after_success:
   # {{{ SSH Key の復帰
-  - openssl aes-256-cbc -K $encrypted_e6cfc0b0977e_key -iv $encrypted_e6cfc0b0977e_iv -in ./.travis/deploy_key.enc -out ~\/.ssh/deploy_rsa -d
+  - openssl aes-256-cbc -K $encrypted_e6cfc0b0977e_key -iv $encrypted_e6cfc0b0977e_iv -in ./.travis/deploy_key.enc -out ~/.ssh/deploy_rsa -d
   - chmod 600 ~/.ssh/deploy_rsa
   - echo -e "Host github.com\n\tStrictHostKeyChecking no\n\tIdentityFile ~/.ssh/deploy_rsa\n" >> ~/.ssh/config
   # }}}
