--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ts-loader": "^4.5.0",
     "tslint": "^5.11.0",
     "typescript": "^3.0.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "vue-loader": "^15.4.1",
     "vue-property-decorator": "^7.0.0",
     "vue-template-compiler": "^2.5.17",
