--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "version": "node ./scripts/version.js",
     "build": "NODE_ENV=production webpack && rm dest/css/*.js",
     "publish": "node ./scripts/publish.js ./release/kcwidget.zip",
+    "announce": "node ./scripts/announce.js",
     "pack": "./scripts/pack.sh",
     "lint": "tslint ./src/**/*.ts",
     "test": "npm run lint && jest",
@@ -39,6 +40,7 @@
     "ts-jest": "^23.1.3",
     "ts-loader": "^4.5.0",
     "tslint": "^5.11.0",
+    "twitter": "^1.7.1",
     "typescript": "^3.0.1",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "vue-loader": "^15.4.1",
