--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.6",
     "@fortawesome/free-solid-svg-icons": "^5.4.1",
-    "@fortawesome/vue-fontawesome": "^0.1.1",
     "@types/chrome": "0.0.72",
     "@types/jest": "^23.3.1",
     "coveralls": "^3.0.2",
@@ -47,10 +46,6 @@
     "twitter": "^1.7.1",
     "typescript": "^3.0.1",
     "uglifyjs-webpack-plugin": "^2.0.1",
-    "vue-loader": "^15.4.1",
-    "vue-property-decorator": "^7.0.0",
-    "vue-template-compiler": "^2.5.17",
-    "vue-typescript-import-dts": "^4.0.0",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0"
   },
@@ -84,7 +79,6 @@
   },
   "dependencies": {
     "chomex": "^1.0.21",
-    "spectre.css": "^0.5.3",
-    "vue": "^2.5.17"
+    "spectre.css": "^0.5.3"
   }
 }
