--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "@fortawesome/free-solid-svg-icons": "^5.4.1",
     "@types/chrome": "0.0.72",
     "@types/jest": "^23.3.1",
+    "@types/react": "^16.7.7",
+    "@types/react-dom": "^16.0.11",
+    "awesome-typescript-loader": "^5.2.1",
     "coveralls": "^3.0.2",
     "css-loader": "^1.0.0",
     "jest": "^23.5.0",
@@ -40,11 +43,12 @@
     "request-promise": "^4.2.2",
     "sass-loader": "^7.1.0",
     "sinon-chrome": "^2.3.2",
+    "source-map-loader": "^0.2.4",
     "ts-jest": "^23.1.3",
     "ts-loader": "^4.5.0",
     "tslint": "^5.11.0",
     "twitter": "^1.7.1",
-    "typescript": "^3.0.1",
+    "typescript": "^3.1.6",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0"
@@ -79,6 +83,8 @@
   },
   "dependencies": {
     "chomex": "^1.0.21",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "spectre.css": "^0.5.3"
   }
 }
