--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/react": "^16.7.7",
     "@types/react-dom": "^16.0.11",
     "awesome-typescript-loader": "^5.2.1",
+    "classnames": "^2.2.6",
     "coveralls": "^3.0.2",
     "css-loader": "^1.0.0",
     "jest": "^23.5.0",
