TypeScript x React 用のtslintの設定してなかったので修正

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "editor.tabSize": 2,
+  "tslint.autoFixOnSave": true,
   "jest.enableInlineErrorMessages": true,
   "jest.showCoverageOnLoad": true
 }
