--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
     "ts-jest": "^23.1.3",
     "ts-loader": "^4.5.0",
     "tslint": "^5.11.0",
+    "tslint-eslint-rules": "^5.4.0",
+    "tslint-react": "^3.6.0",
+    "tslint-react-recommended": "^1.0.15",
     "twitter": "^1.7.1",
     "typescript": "^3.1.6",
     "uglifyjs-webpack-plugin": "^2.0.1",
