--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "npm": "6.4.0"
   },
   "scripts": {
-    "start": "NODE_ENV=development webpack -p --watch",
+    "start": "NODE_ENV=development webpack --progress --watch",
     "version": "node ./scripts/version.js",
     "build": "NODE_ENV=production webpack && rm dest/css/*.js",
     "publish": "node ./scripts/publish.js ./release/kcwidget.zip",
