--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
   - 9.11
 script:
-  - npm run ci
+  - npm run test-ci
 after_success:
   # {{{ SSH Key の復帰
   - openssl aes-256-cbc -K $encrypted_e6cfc0b0977e_key -iv $encrypted_e6cfc0b0977e_iv -in ./.travis/deploy_key.enc -out ~/.ssh/deploy_rsa -d
