--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "announce": "node ./scripts/announce.js",
     "tweet": "node ./scripts/tweet.js",
     "pack": "./scripts/pack.sh",
-    "lint": "tslint ./src/**/*.ts",
+    "lint": "eslint ./src/js/**/*.tsx ./src/js/**/*.ts",
     "test": "npm run lint && jest",
     "test-ci": "tslint ./src/**/*.ts && jest --coverage --coverageReporters=text-lcov | coveralls"
   },
@@ -30,9 +30,13 @@
     "@types/jest": "^23.3.1",
     "@types/react": "^16.7.7",
     "@types/react-dom": "^16.0.11",
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/parser": "^1.13.0",
     "awesome-typescript-loader": "^5.2.1",
     "coveralls": "^3.0.2",
     "css-loader": "^1.0.0",
+    "eslint": "^6.1.0",
+    "eslint-plugin-react": "^7.14.3",
     "jest": "^24.8.0",
     "jest-canvas-mock": "^1.1.0",
     "jest-cli": "^24.8.0",
