--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "3.0.0-alpha.45",
   "description": "『艦これ』をちょっとだけ快適にするやつ",
   "engines": {
-    "node": "10.16.0",
-    "npm": "6.9.0"
+    "node": "~12.14.0",
+    "npm": "6.13.4"
   },
   "scripts": {
     "start": "NODE_ENV=development webpack --progress --watch",
