npm audit fix したり、outdatedを根性で更新したけど動いてるっぽい

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,8 @@
   "eslint.alwaysShowStatus": true,
   "eslint.autoFixOnSave": true,
   "jest.enableInlineErrorMessages": true,
-  "jest.showCoverageOnLoad": true
+  "jest.showCoverageOnLoad": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  }
 }
