--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "target": "es5",
         "jsx": "react",
         "lib": ["es6", "es2015", "dom"],
+        "types": [],
         "moduleResolution": "node",
         "allowSyntheticDefaultImports": true,
         "experimentalDecorators": true
