--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "coveralls": "^3.0.2",
     "css-loader": "^3.5.3",
     "eslint": "^7.0.0",
+    "eslint-plugin-jest": "^23.13.1",
     "eslint-plugin-react": "^7.14.3",
     "jest": "^26.0.1",
     "jest-canvas-mock": "^2.2.0",
