なんかテスト壊れてましたよ？

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,9 @@
         "target": "es5",
         "jsx": "react",
         "lib": ["es6", "es2015", "dom"],
-        "types": [],
+        "types": [
+            "jest", "chrome"
+        ],
         "moduleResolution": "node",
         "allowSyntheticDefaultImports": true,
         "experimentalDecorators": true
