coverallsを使うのGitHub Actionsなのでtemplate使うようにした

--- a/.github/workflows/javascript-ci.yml
+++ b/.github/workflows/javascript-ci.yml
@@ -19,4 +19,8 @@ jobs:
     - name: Lint
       run: npm run lint
     - name: Test
-      run: npm run test-ci
+      run: npm run test
+    - name: Coveralls
+      uses: coverallsapp/github-action@master
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
