--- a/.github/workflows/dev-delivery.yml
+++ b/.github/workflows/dev-delivery.yml
@@ -22,7 +22,7 @@ jobs:
       run: npm install
 
     - name: Should Deploy?
-      run: source ./scripts/should_deploy.sh
+      run: source ./scripts/should_deliver_dev.sh
 
     - name: Build
       run: npm run build
