--- a/.github/workflows/webstore-dev.yml
+++ b/.github/workflows/webstore-dev.yml
@@ -13,6 +13,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         ref: develop
+        fetch-depth: 0
     - name: Set up Node.js
       uses: actions/setup-node@v1
       with:
