--- a/.github/workflows/webstore-dev.yml
+++ b/.github/workflows/webstore-dev.yml
@@ -1,7 +1,7 @@
 name: Web Store DEV
 on:
   schedule:
-    - cron: '30 * * * *'
+    - cron: '*/10 * * * *'
 
 jobs:
   delivery:
@@ -21,6 +21,11 @@ jobs:
 
     - name: Install dependencies
       run: npm install
+
+    - name: Git User Info
+      run: |
+        git config --global user.email otiai10+ayanel-ci@gmail.com
+        git config --global user.name "Ayanel CI"
 
     - name: Should Deploy?
       run: source ./scripts/should_deliver_dev.sh
