自動リリースとリリースアナウンスの設定

--- a/.github/workflows/webstore-dev.yml
+++ b/.github/workflows/webstore-dev.yml
@@ -52,3 +52,8 @@ jobs:
     - name: Announce
       run: npm run announce
       if: ${{ env.SHOULD_DELIVER_DEV }}
+      env:
+        TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
+        TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
+        TWITTER_ACCESS_TOKEN_KEY: ${{ secrets.TWITTER_ACCESS_TOKEN_KEY }}
+        TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
