更新内容が無い場合でもnpm run tweetが呼ばれているのでAPIキーを渡す

--- a/.github/workflows/webstore-dev.yml
+++ b/.github/workflows/webstore-dev.yml
@@ -32,6 +32,10 @@ jobs:
       run: source ./scripts/should_deliver_dev.sh
       env:
         TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
+        TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
+        TWITTER_ACCESS_TOKEN_KEY: ${{ secrets.TWITTER_ACCESS_TOKEN_KEY }}
+        TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
 
     - name: Build
       run: npm run build
