デバッグ用に10分おきにリリース判定するやつ

--- a/.github/workflows/webstore-dev.yml
+++ b/.github/workflows/webstore-dev.yml
@@ -1,7 +1,9 @@
 name: Web Store TEST
 on:
   schedule:
-    - cron: '0 4 * * *'
+    # - cron: '0 4 * * *'
+    # DEBUG
+    - cron: '*/10 * * * *'
 
 jobs:
   delivery:
