--- a/.github/workflows/webstore-dev.yml
+++ b/.github/workflows/webstore-dev.yml
@@ -1,9 +1,7 @@
 name: Web Store TEST
 on:
   schedule:
-    # - cron: '0 4 * * *'
-    # DEBUG
-    - cron: '*/10 * * * *'
+    - cron: '0 4 * * *'
 
 jobs:
   delivery:
