--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "module": "es2015",
         "target": "es5",
         "jsx": "react",
-        "lib": ["es6", "es2015", "dom"],
+        "lib": ["es6", "es2015", "ES2017", "dom"],
         "types": [
             "jest", "chrome"
         ],
