--- a/.github/workflows/contrib-notice.yml
+++ b/.github/workflows/contrib-notice.yml
@@ -23,7 +23,7 @@ jobs:
         TITLE: ${{ github.event.issue.title}}
         URL: ${{ github.event.issue.html_url }}
       run: |
-        echo -ne "[ISSUE] ${TITLE}\nBy ${SENDER}\n#艦これウィジェット\n${URL}" >> announcement.txt
+        echo -ne "ご意見が届きました！\n${TITLE}\nby ${SENDER}\n#艦これウィジェット\n${URL}" >> announcement.txt
 
     - name: PR用ツイート内容の生成
       if: github.event_name == 'pull_request'
@@ -32,7 +32,7 @@ jobs:
         TITLE: ${{ github.event.pull_request.title}}
         URL: ${{ github.event.pull_request.html_url }}
       run: |
-        echo -ne "[PR] ${TITLE}\nBy ${SENDER}\n#艦これウィジェット\n${URL}" >> announcement.txt
+        echo -ne "開発ありがとう！\n${TITLE}\nby ${SENDER}\n#艦これウィジェット\n${URL}" >> announcement.txt
 
     - name: Tweet
       run: |
