--- a/.github/workflows/webstore-prod.yml
+++ b/.github/workflows/webstore-prod.yml
@@ -22,7 +22,7 @@ jobs:
         node-version: 12.x
 
     - name: Install dependencies
-      run: npm install
+      run: npm --production=false install
 
     - name: Build
       run: npm run build
