implicitなcaptureVisibleTabを発火させるために結局<all_urls>が必要っぽい
Related #1073

--- a/manifest.json
+++ b/manifest.json
@@ -6,8 +6,9 @@
   "description": "「艦これ」をほどよく快適にたのしく遊べるようにするやつです",
   "permissions": [
     "tabs",
-    "webRequest",
     "alarms",
+    "<all_urls>",
+    "webRequest",
     "notifications",
     "unlimitedStorage"
   ],
