Queueモデルで持ってた不要な定数をNotificationSettingに寄せるリファクタ

--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
       "jsx"
     ],
     "setupFiles": [
+      "<rootDir>/src/js/entrypoints/global-pollution.ts",
       "<rootDir>/tests/setup/chrome.ts",
       "<rootDir>/tests/setup/filesystem.ts",
       "<rootDir>/tests/setup/image-onload.ts",
