Workflowのデバッグ

--- a/.github/workflows/webstore-stage.yml
+++ b/.github/workflows/webstore-stage.yml
@@ -2,6 +2,10 @@ name: Web Store TEST
 on:
   schedule:
     - cron: '0 4 * * *'
+  # {{{ DEBUG
+  push:
+    branches: [develop]
+  # }}}
 
 jobs:
   delivery:
