--- a/.github/workflows/webstore-prod.yml
+++ b/.github/workflows/webstore-prod.yml
@@ -1,4 +1,6 @@
 name: Web Store PRODUCTION
+# Tagはwebstore-stageが作るので、
+# これをreleaseしたら、このworkflowが走ります.
 on:
   release:
     types:
@@ -41,23 +43,23 @@ jobs:
         asset_name: kcwidget.zip
         asset_content_type: application/zip
 
-    # - name: Publish to Chrome Web Store
-    #   run: npm run publish
-    #   env:
-    #     GOOGLEAPI_CLIENT_ID: ${{ secrets.GOOGLEAPI_CLIENT_ID }}
-    #     GOOGLEAPI_CLIENT_SECRET: ${{ secrets.GOOGLEAPI_CLIENT_SECRET }}
-    #     GOOGLEAPI_REFRESH_TOKEN: ${{ secrets.GOOGLEAPI_REFRESH_TOKEN }}
+    - name: Publish to Chrome Web Store
+      run: npm run publish
+      env:
+        GOOGLEAPI_CLIENT_ID: ${{ secrets.GOOGLEAPI_CLIENT_ID }}
+        GOOGLEAPI_CLIENT_SECRET: ${{ secrets.GOOGLEAPI_CLIENT_SECRET }}
+        GOOGLEAPI_REFRESH_TOKEN: ${{ secrets.GOOGLEAPI_REFRESH_TOKEN }}
 
-    # - name: Create release announcement
-    #   run: npm run announce
+    - name: Create release announcement
+      run: npm run announce
 
-    # - name: Tweet announcement
-    #   run: |
-    #     announcement=`cat announcement.txt`
-    #     echo "[DEBUG] ${announcement}"
-    #     npm run tweet "${announcement}"
-    #   env:
-    #     TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
-    #     TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
-    #     TWITTER_ACCESS_TOKEN_KEY: ${{ secrets.TWITTER_ACCESS_TOKEN_KEY }}
-    #     TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
+    - name: Tweet announcement
+      run: |
+        announcement=`cat announcement.txt`
+        echo "[DEBUG] ${announcement}"
+        npm run tweet "${announcement}"
+      env:
+        TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
+        TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
+        TWITTER_ACCESS_TOKEN_KEY: ${{ secrets.TWITTER_ACCESS_TOKEN_KEY }}
+        TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
