--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,7 @@
   "description": "「艦これ」をほどよく快適にたのしく遊べるようにするやつです",
   "permissions": [
     "tabs",
+    "storage",
     "downloads",
     "<all_urls>",
     "webRequest",
