--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kan-colle-widget",
-  "version": "3.0.0-alpha.82",
+  "version": "3.0.1",
   "description": "『艦これ』をちょっとだけ快適にするやつ",
   "engines": {
     "node": "~12.14.0",
